# freetype2

./: CMakeLists.txt  README.md
include/freetype/config/: ftoption.h.in
src/tools/: CMakeLists.txt
